# svd-img

./: .gitignore  Cargo.toml  README.md  file_structure.md  foo.txt  foobar.txt  yess.isvd
src/: aggregate.rs  decode.rs  encode.rs  main.rs  read.rs  test.rs  write.rs
