[package]
name = "svd-img"
version = "0.1.0"
authors = ["Rayerdyne <francois.straet@gmail.som>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.19.0", path = "../nalgebra"}
clap = "2.33.0"
image = "0.23"
